apps/infra/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: norma
  labels:
    name: norma
